2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/argtypes.py: Add suppport for const object args.
	Patch by wollny@cbs.mpg.de, plus some additional changes for code
	style improvements and a bug fix.

	* gtk/gtkmodule.c (_pygtk_log_func): Call g_log_default_handler
	when python isn't initialized.  Fixes #334188.

	* examples/Makefile.am (EXTRA_DIST): Ship new editable interface example.

	* examples/gobject/editable-interface.py: Add small example of
	overriding GtkEditable interface method and chaining to parent.

	* codegen/codegen.py: Bug 334986: "Make it possible to
	re-implement interfaces and chain to parent impl."

2006-04-01  Johan Dahlin  <johan@gnome.org>

	* codegen/h2def.py (proto_pat): Allow whitespace before
	last parenthesis. Fixes #317124

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.defs (GtkSpinButton.input, GtkEditable.do_insert_text) 
	(GtkEditable.get_selection_bounds,
	GtkMenuItem.toggle_size_request): Add (direction ...) specifiers
	to these virtuals.  Probably more of these are missing, though.

	* codegen/codegen.py,
	* codegen/definitions.py,
	* codegen/reversewrapper.py:
	Add support for int* and double* (and basic infrastructure to
	support other types in the future) parameters for "reverse
	wrappers".  To use this feature one needs to help the
	codegenerator by adding (direction "out") or (direction "inout") to
	the parameter definitions as appropriate.  Fixes #335964.

2006-04-01  John Finlay  <finlay@moerari.com>

	reviewed by: Johan

	* gtk/gdk.defs:
	* gtk/gtk.defs:
	* gtk/gtk.override:
	* gtk/gtktextview.override:
	* gtk/gtktreeview.override:
	* gtk/gtkwidget.override:
	Add missing bindings, fixes #316881

2006-04-01  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.defs: Remove display_open_default_libgtk_only,
	it should not be wrapped.
	Fixes #321476

2006-04-01  Marco Cabizza  <marco87@gmail.com>

	reviewed by: Johan

	* gtk/gdk.defs: