@@ -14,6 +14,8 @@ struct _PyGtk_FunctionStruct {
     PyObject *(* gdkAtom_new)(GdkAtom atom);
     gboolean  (* rectangle_from_pyobject)(PyObject     *object,
 					  GdkRectangle *rectangle);
+    PyObject    * (*tree_path_to_pyobject) (GtkTreePath *path);
+    GtkTreePath * (*tree_path_from_pyobject) (PyObject *object);
 };
 
 /* structure definitions for the various object types in PyGTK */
@@ -53,6 +55,8 @@ struct _PyGtk_FunctionStruct *_PyGtk_API;
 
 /* public functions */
 #define pygdk_rectangle_from_pyobject (_PyGtk_API->rectangle_from_pyobject)
+#define pygtk_tree_path_to_pyobject (_PyGtk_API->tree_path_to_pyobject)
+#define pygtk_tree_path_from_pyobject (_PyGtk_API->tree_path_from_pyobject)
 
 
 /* a function to initialise the pygtk functions */
