@@ -1,5 +1,8 @@
 2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gtk/pygtk.h, gtk/gtkmodule.c: Export pygtk_tree_path_to_pyobject
+	and pygtk_tree_path_from_pyobject as public APIs.  Fixes #318021.
+
 	* codegen/argtypes.py: Add suppport for const object args.
 	Patch by wollny@cbs.mpg.de, plus some additional changes for code
 	style improvements and a bug fix.
